# purpleshchoolhw

./: .gitignore
javascript_advace/1-map/: script.js
javascript_advace/10-pokemon-promise/: app.js
javascript_advace/2-dice/: index.html  script.js
javascript_advace/3-birthday/: script.js
javascript_advace/4-timer/: app.js  index.html
javascript_advace/5-oop/: app.js  index.html
javascript_advace/6-class/: app.js
javascript_advace/7-oop-in-class/: app.js
javascript_advace/8-solid/: app.js
javascript_advace/9-pokemon/: app.js  index.html
javascript_basics/10-array-clean/: index.html  script.js  task.md
javascript_basics/11-date-array/: index.html  script.js
javascript_basics/12-luna/: index.html  script.js
javascript_basics/13-query/: scrypt.js
javascript_basics/13-task-object/: index.html  script.js
javascript_basics/16-anoter-task/: script.js
javascript_basics/17-calc/: index.html  script.js
javascript_basics/4-navigator/: index.html  script.js  task1.md
javascript_basics/5-language/: index.html  script.js  task1.md
javascript_basics/6-driver/: index.html  script.js  task.md
javascript_basics/7-converter/: index.html  script.js  task.md
javascript_basics/8-crypto/: index.html  script.js  task.md
javascript_basics/9-sort-loop/: index.html  script.js
lnx_basics/section-2/: 1_default_shell_max.sh  2_chng_sh.sh  3_add_var_env.sh  4_add_aliase.sh  5_chng_promt.sh  ls  passwd  profile  prompt
lnx_basics/section-3/: 1_add_host.sh  hosts  (+1 more)
python_advance/8-final/: pyproject.toml
python_advance/8-final/eight_final/: cli.py
(+50 files in other folders)
